<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.OrderFragment">

    <LinearLayout
        android:orientation="vertical"
        android:paddingBottom="@dimen/space_20"
        android:layout_margin="@dimen/space_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <in.binplus.mobusers.Fonts.LatoBLack
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:text="@string/txt_mobile_details"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/space_5"
            android:background="@color/dark_gray"
            android:layout_height="@dimen/space_1"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/space_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <in.binplus.mobusers.Fonts.LatoBLack
                android:text="@string/txt_imei"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <in.binplus.mobusers.Fonts.LatoBLack
                android:id="@+id/tv_imei"
                android:gravity="center_vertical"
                android:hint="@string/txt_imei"
                android:fontFamily="@font/bold"
                android:textSize="15sp"
                android:layout_marginTop="@dimen/space_5"
                android:background="@drawable/edit_message_layout"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/space_10"
                android:layout_height="40dp"/>
        </LinearLayout>
 <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/space_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <in.binplus.mobusers.Fonts.LatoBLack
                android:text="@string/txt_brand"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:hint="@string/txt_brand"
                android:id="@+id/edt_brand"
                android:fontFamily="@font/bold"
                android:textSize="15sp"
                android:singleLine="true"
                android:layout_marginTop="@dimen/space_5"
                android:background="@drawable/edit_message_layout"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/space_10"
                android:layout_height="40dp"/>
        </LinearLayout>
 <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/space_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <in.binplus.mobusers.Fonts.LatoBLack
                android:text="@string/txt_model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:hint="@string/txt_model"
                android:id="@+id/edt_model"
                android:fontFamily="@font/bold"
                android:textSize="15sp"
                android:singleLine="true"
                android:layout_marginTop="@dimen/space_5"
                android:background="@drawable/edit_message_layout"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/space_10"
                android:layout_height="40dp"/>
        </LinearLayout>
 <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/space_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <in.binplus.mobusers.Fonts.LatoBLack
                android:text="@string/txt_problems"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:hint="@string/txt_problems"
                android:id="@+id/edt_problems"
                android:fontFamily="@font/bold"
                android:textSize="15sp"
                android:layout_marginTop="@dimen/space_5"
                android:background="@drawable/edit_message_layout"
                android:layout_width="match_parent"
                android:gravity="start"
                android:paddingTop="5dp"
                android:paddingLeft="@dimen/space_10"
                android:layout_height="100dp"/>
        </LinearLayout>
 <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/space_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <in.binplus.mobusers.Fonts.LatoBLack
                android:text="@string/txt_instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/edt_instructions"
                android:hint="@string/txt_instructions"
                android:fontFamily="@font/bold"
                android:textSize="15sp"
                android:layout_marginTop="@dimen/space_5"
                android:background="@drawable/edit_message_layout"
                android:layout_width="match_parent"
                android:gravity="start"
                android:paddingTop="5dp"
                android:paddingLeft="@dimen/space_10"
                android:layout_height="100dp"/>
        </LinearLayout>


        <in.binplus.mobusers.Fonts.LatoBLack
            android:textAlignment="center"
            android:textSize="20dp"
            android:layout_marginTop="@dimen/space_10"
            android:layout_width="match_parent"
            android:text="@string/txt_pick_details"
            android:layout_height="wrap_content"/>
        <View
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/space_5"
            android:background="@color/dark_gray"
            android:layout_height="@dimen/space_1"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/space_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <in.binplus.mobusers.Fonts.LatoBLack
                android:text="@string/txt_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:hint="@string/txt_name"
                android:id="@+id/edt_name"
                android:fontFamily="@font/bold"
                android:textSize="15sp"
                android:singleLine="true"
                android:layout_marginTop="@dimen/space_5"
                android:background="@drawable/edit_message_layout"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/space_10"
                android:layout_height="40dp"/>
        </LinearLayout>
 <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/space_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <in.binplus.mobusers.Fonts.LatoBLack
                android:text="@string/txt_pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:hint="@string/txt_pincode"
                android:id="@+id/edt_pincode"
                android:fontFamily="@font/bold"
                android:textSize="15sp"
                android:inputType="number"
                android:maxLength="6"
                android:singleLine="true"
                android:layout_marginTop="@dimen/space_5"
                android:background="@drawable/edit_message_layout"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/space_10"
                android:layout_height="40dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/space_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <in.binplus.mobusers.Fonts.LatoBLack
                android:text="@string/txt_city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:hint="@string/txt_city"
                android:id="@+id/edt_city"
                android:fontFamily="@font/bold"
                android:textSize="15sp"
                android:singleLine="true"
                android:layout_marginTop="@dimen/space_5"
                android:background="@drawable/edit_message_layout"
                android:layout_width="match_parent"
                android:paddingLeft="@dimen/space_10"
                android:layout_height="40dp"/>
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_marginTop="@dimen/space_10"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <in.binplus.mobusers.Fonts.LatoBLack
                android:text="@string/txt_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <EditText
                android:id="@+id/edt_address"
                android:hint="@string/txt_address"
                android:fontFamily="@font/bold"
                android:textSize="15sp"
                android:layout_marginTop="@dimen/space_5"
                android:background="@drawable/edit_message_layout"
                android:layout_width="match_parent"
                android:gravity="start"
                android:paddingTop="5dp"
                android:paddingLeft="@dimen/space_10"
                android:layout_height="100dp"/>
        </LinearLayout>


        <Button
            android:layout_marginTop="@dimen/space_20"
            android:layout_width="match_parent"
            android:text="Order Now!"
            android:textAllCaps="false"
            android:fontFamily="@font/bold"
            android:id="@+id/btn_order"
            android:textColor="@color/white"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/reg_button"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>