<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#fff"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/l2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="10"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_weight="7"
            android:gravity="center_vertical"
            android:layout_gravity="center_vertical"
            android:layout_width="0dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <in.binplus.mobusers.Fonts.LatoBLack
                    android:id="@+id/txt_sale_code"
                    android:text="@string/txt_sale_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <in.binplus.mobusers.Fonts.LatoBLack
                    android:layout_alignParentRight="true"
                    android:text="0"
                    android:layout_marginRight="@dimen/space_10"
                    android:id="@+id/tv_sale_code"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <in.binplus.mobusers.Fonts.LatoBLack
                android:id="@+id/txt_imie"
                android:text="@string/txt_imei_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <in.binplus.mobusers.Fonts.LatoBLack
                android:id="@+id/tv_imei"
                android:layout_alignParentRight="true"
                android:text="0"
                android:layout_marginRight="@dimen/space_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <in.binplus.mobusers.Fonts.LatoBLack
                android:id="@+id/txt_acti"
                android:text="@string/txt_activation_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <in.binplus.mobusers.Fonts.LatoBLack
                android:id="@+id/tv_activation_date"
                android:layout_width="wrap_content"
                android:layout_alignParentRight="true"
                android:text="0"
                android:layout_marginRight="@dimen/space_10"
                android:layout_height="wrap_content"/>
            </RelativeLayout>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

            <in.binplus.mobusers.Fonts.LatoBLack
                android:id="@+id/txt_exp"
                android:text="@string/txt_activation_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <in.binplus.mobusers.Fonts.LatoBLack
                android:id="@+id/tv_expiry"

                android:layout_alignParentRight="true"
                android:text="0"
                android:layout_marginRight="@dimen/space_10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            </RelativeLayout>
        </LinearLayout>
        <ImageView
            android:tint="@color/black"
            android:padding="@dimen/space_10"
            android:src="@drawable/brcode"
            android:layout_weight="3"
            android:layout_width="0dp"
            android:layout_height="100dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>

