<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".Fragment.HomeFragment"
    android:background="@color/gray">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


      <ScrollView
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.daimajia.slider.library.SliderLayout
            android:id="@+id/home_img_slider"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="2dp" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card_barcode"
            android:layout_width="match_parent"
            android:layout_gravity="left"
            app:cardBackgroundColor="@color/white"
            android:layout_margin="2dp"
            android:layout_height="70dp"
            app:cardCornerRadius="5dp">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <LinearLayout
                    android:layout_centerInParent="true"
                    android:layout_width="wrap_content"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:layout_width="40dp"
                        android:src="@drawable/barcode_icon"
                        android:layout_height="40dp"/>
                    <in.binplus.mobusers.Fonts.LatoBLack
                        android:text="@string/txt_barcode_details"
                        android:layout_gravity="center_vertical"
                        android:textAlignment="center"
                        android:textColor="@color/black"
                        android:textSize="20dp"
                        android:layout_marginLeft="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                          </LinearLayout>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <include layout="@layout/layout_prime_banner" />

        <ImageView
            android:layout_width="match_parent"
            android:src="@drawable/banner"
            android:scaleType="fitXY"
            android:layout_marginTop="5dp"
            android:layout_height="140dp"/>
        <LinearLayout
       android:weightSum="10"
       android:layout_marginTop="5dp"
       android:layout_width="match_parent"
       android:orientation="horizontal"
       android:layout_height="wrap_content">

       <androidx.cardview.widget.CardView
           android:layout_width="match_parent"
           android:layout_gravity="left"
          android:layout_margin="2dp"
           android:layout_height="wrap_content"
           app:cardCornerRadius="5dp">
           <RelativeLayout
               android:layout_width="match_parent"
               android:layout_height="match_parent">
           <LinearLayout
               android:layout_centerInParent="true"
               android:layout_width="match_parent"
               android:orientation="vertical"
               android:layout_margin="5dp"
               android:layout_height="match_parent">


               <in.binplus.mobusers.Fonts.LatoBLack
                   android:text="Others"
                   android:textSize="18dp"
                   android:textAlignment="center"
                   android:textColor="@color/black"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"/>
               <View

                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:layout_marginTop="3dp"
                   android:background="@color/dark_gray"/>

               <RelativeLayout
                   android:id="@+id/rel_terms"
                   android:layout_margin="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <ImageView
                       android:id="@+id/terms_icon"
                       android:src="@drawable/terms_icon"
                       android:layout_width="30dp"
                       android:layout_height="30dp"/>
                   <in.binplus.mobusers.Fonts.LatoBLack
                       android:textSize="16dp"
                       android:layout_width="wrap_content"
                       android:layout_centerVertical="true"
                       android:layout_marginLeft="5dp"
                       android:text="@string/menu_terms"
                       android:layout_toRightOf="@id/terms_icon"
                       android:layout_height="wrap_content"/>
                   <ImageView
                       android:layout_alignParentRight="true"
                       android:layout_width="30dp"
                       android:src="@drawable/arrow_front"
                       android:layout_height="30dp"/>
               </RelativeLayout>
               <View

                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:background="@color/dark_gray"/>

               <RelativeLayout
                   android:id="@+id/rel_about"
                   android:layout_margin="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <ImageView
                       android:id="@+id/about_icon"
                       android:src="@drawable/about_icon"
                       android:layout_width="30dp"
                       android:layout_height="30dp"/>
                   <in.binplus.mobusers.Fonts.LatoBLack
                       android:textSize="16dp"
                       android:layout_width="wrap_content"
                       android:layout_centerVertical="true"
                       android:layout_marginLeft="5dp"
                       android:text="@string/txt_about_us"
                       android:layout_toRightOf="@id/about_icon"
                       android:layout_height="wrap_content"/>
                   <ImageView
                       android:layout_alignParentRight="true"
                       android:layout_width="30dp"
                       android:src="@drawable/arrow_front"
                       android:layout_height="30dp"/>
               </RelativeLayout>
               <View

                   android:layout_width="match_parent"
                   android:layout_height="1dp"
                   android:background="@color/dark_gray"/>



               <RelativeLayout
                   android:id="@+id/rel_enquiry"
                   android:layout_margin="10dp"
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content">
                   <ImageView
                       android:id="@+id/question_icon"
                       android:src="@drawable/any_que_icon"
                       android:layout_width="30dp"
                       android:layout_height="30dp"/>
                   <in.binplus.mobusers.Fonts.LatoBLack
                       android:textSize="16dp"
                       android:layout_width="wrap_content"
                       android:layout_centerVertical="true"
                       android:layout_marginLeft="5dp"
                       android:text="@string/text_question"
                       android:layout_toRightOf="@id/question_icon"
                       android:layout_height="wrap_content"/>
                   <ImageView
                       android:layout_alignParentRight="true"
                       android:layout_width="30dp"
                       android:src="@drawable/arrow_front"
                       android:layout_height="30dp"/>
               </RelativeLayout>

           </LinearLayout>
           </RelativeLayout>
       </androidx.cardview.widget.CardView>


   </LinearLayout>
   </LinearLayout>
      </ScrollView>
        <RelativeLayout
            android:visibility="gone"
            android:layout_alignParentBottom="true"
            android:layout_width="match_parent"
            android:background="@color/left_color"
            android:layout_height="70dp">

            <Button
                android:id="@+id/btn_query"
                android:layout_width="wrap_content"
                android:text="@string/text_question"
                android:textAllCaps="false"
                android:layout_centerInParent="true"
                android:textColor="@color/right_color"
                android:padding="10dp"
                android:backgroundTint="@color/white"
                android:background="@drawable/login_button"
                android:layout_height="wrap_content"/>
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>